--- a/web/index.html
+++ b/web/index.html
@@ -3,10 +3,12 @@
 <head>
 <title>SudokuCube</title>
 </head>
+<style>
+* {
+	margin: 0;
+}
+</style>
 <body>
-  <header>
-<h1> SudokuCube Solver </h1>
-  </header>
 <script src="index.js" type='module'></script>
 </body>
 </html>
